--- a/assets/scss/layouts/_default/terms.scss
+++ b/assets/scss/layouts/_default/terms.scss
@@ -1,8 +1,8 @@
 .terms {
     &__inner {
-        width: 760px;
+        width: 740px;
         min-height: 600px;
-        margin-top: 20px;
+        margin: 20px auto auto;
         padding: 20px;
         background: $base-background;
         border: 1px solid $light-border;
