--- a/assets/scss/layouts/partials/header.scss
+++ b/assets/scss/layouts/partials/header.scss
@@ -53,22 +53,24 @@
         }
         &__menu {
             padding: 10px 0;
-            &__items {
-                list-style: none;
-                display: flex;
-            }
-            &__item {
-                flex: 1;
-                text-align: center;
-                font-size: 18px;
-            }
-            &__item:not(:last-child) {
-                border-right: 2px solid $border;
-            }
-            &__itemLink {
-                display: block;
-                font-weight: bold;
-                color: $header-menu-color;
+            &__topMenu {
+                &__items {
+                    list-style: none;
+                    display: flex;
+                }
+                &__item {
+                    flex: 1;
+                    text-align: center;
+                    font-size: 18px;
+                }
+                &__item:not(:last-child) {
+                    border-right: 2px solid $border;
+                }
+                &__itemLink {
+                    display: block;
+                    font-weight: bold;
+                    color: $header-menu-color;
+                }
             }
         }
     }
@@ -85,7 +87,10 @@
                 position: absolute;
                 width: 100%;
                 right: -100%;
+                overflow-y: scroll;
+                height: 80vh;
                 margin-top: 14px;
+                padding: 12.5px;
                 background: $base-background;
                 border-top: 1px solid $light-border;
                 border-bottom: 1px solid $light-border;
@@ -93,18 +98,64 @@
                 &.open {
                     right: 0;
                 }
-                &__items {
-                    display: flex;
-                    flex-direction: column;
-                    border: none;
-                    padding: 0 20px 2px;
+                &__topMenu {
+                    &__items {
+                        display: flex;
+                        flex-direction: column;
+                        border: none;
+                    }
+                    &__itemLink {
+                        padding: 10px;
+                    }
+                    &__item:not(:last-child) {
+                        border-right: none;
+                        border-bottom: 1px solid $border;
+                    }
                 }
-                &__itemLink {
-                    padding: 10px;
-                }
-                &__item:not(:last-child) {
-                    border-right: none;
-                    border-bottom: 1px solid $border;
+                &__sideMenu {
+                    padding: 10px 20px;
+                    background: $base-background;
+                    &__title {
+                        margin-bottom: 15px;
+                        padding-bottom: 2px;
+                        border-bottom: 2px solid $title-border;
+                    }
+                    &__items {
+                        list-style: none;
+                        display: flex;
+                        justify-content: space-around;
+                        flex-wrap: wrap;
+                        margin: auto;
+                    }
+                    &__item {
+                        width: $sp-menu-icon-size;
+                        height: $sp-menu-icon-size;
+                        margin: 10px auto;
+                        border: 1px solid $light-border;
+                        border-radius: 10%;
+                        box-shadow: 2px 3px 4px $border;
+                        transition: 0.3s ease-in-out;
+                        &:hover {
+                            transform: translate3d(2px, 3px, 1px);
+                            box-shadow: 0px 1px 2px $border;
+                        }
+                    }
+                    &__itemLink {
+                        width: 100%;
+                        height: 100%;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        text-align: center;
+                        flex-direction: column;
+                        margin-top: 3px;
+                        &:hover, &:hover * {
+                            opacity: 1;
+                        }
+                    }
+                    &__itemTitle {
+                        margin-top: 2px;
+                    }
                 }
             }
         }
