--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -149,5 +149,52 @@
                 {{ partial "tag-list.html" (dict "tags" .Site.Taxonomies.tags.ByCount) }}
             </nav>
         </div>
+
+        <div class="partials__sidebar__card">
+            <h3 class="partials__sidebar__title">
+                アーカイブ
+            </h3>
+            <nav class="partials__sidebar__archive">
+                <ul class="partials__sidebar__archive__yearList">
+                    {{ $articles := where .Site.RegularPages.ByDate.Reverse ".Section" "==" "article"}}
+                    {{ $archives := partial "functions/archives" (dict "articles" $articles "from" "Date") }}
+                    {{ range $archives }}
+                        {{ range $year, $year_list := . }}
+                            <li class="close archive-accordion partials__sidebar__archive__yearItem">
+                                <div class="partials__sidebar__archive__yearItemTitle">{{ $year }}年</div>
+                                <div class="archive-accordion-child-wrapper partials__sidebar__archive__monthListWrapper">
+                                    <ul class="archive-accordion-child partials__sidebar__archive__monthList">
+                                        {{ range $year_list }}
+                                            <li class="archive-accordion-child partials__sidebar__archive__monthItem">
+                                                {{ range $month, $month_list := . }}
+                                                    <a href="{{ "archives" | relURL }}/{{ printf "%s年%s月" $year $month | urlize  }}" class="partials__sidebar__archive__monthItemLink">
+                                                        {{ printf "%s年%s月" $year $month }}（{{ len $month_list }}）
+                                                    </a>
+                                                {{ end }}
+                                            </li>
+                                        {{ end }}
+                                    </ul>
+                                </div>
+                            </li>
+                        {{ end }}
+                    {{ end }}
+            </nav>
+        </div>
+        <script>
+            document.querySelectorAll('.archive-accordion').forEach(function(ele) {
+                ele.addEventListener('click', function(ev) {
+                    if (ev.target.tagName === 'A') {
+                        return
+                    }
+                    ev.currentTarget.classList.toggle('open')
+                    ev.currentTarget.classList.toggle('close')
+                    if (ev.currentTarget.classList.contains('open')) {
+                        ev.currentTarget.querySelector('.archive-accordion-child-wrapper').style.height = ev.currentTarget.querySelector('.archive-accordion-child').offsetHeight + 'px'
+                    } else {
+                        ev.currentTarget.querySelector('.archive-accordion-child-wrapper').style.height = '0'
+                    }
+                })
+            })
+        </script>
     </div>
 {{ end }}
