--- a/assets/scss/layouts/partials/footer.scss
+++ b/assets/scss/layouts/partials/footer.scss
@@ -16,6 +16,7 @@
         &__copyright {
             margin-top: 20px;
             text-align: center;
+            font-size: 13px;
         }
     }
 }
