--- a/assets/scss/layouts/partials/sidebar.scss
+++ b/assets/scss/layouts/partials/sidebar.scss
@@ -39,6 +39,10 @@
                 color: $light-text;
             }
         }
+        &__twitterTimeline {
+            max-height: 400px;
+            overflow-y: auto;
+        }
         &__menu {
             &__items {
                 list-style: none;
