--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -27,7 +27,7 @@
             {{ $thumbnail := .Resources.Match "thumbnail.*" }}
             {{ if $thumbnail }}
                 {{ $thumbnail = (index $thumbnail 0).Fit (printf "640x640 q%d webp" .Site.Params.imageQuality) }}
-                <img src="{{ $thumbnail.RelPermalink  }}" alt="{{ .Title }}" loading="lazy" class="single__article__thumbnail">
+                <img src="{{ $thumbnail.RelPermalink  }}" alt="{{ .Title }}" class="single__article__thumbnail">
             {{ end }}
 
             {{ if .Params.toc }}
