検索機能の追加

--- a/assets/scss/layouts/partials/header.scss
+++ b/assets/scss/layouts/partials/header.scss
@@ -98,7 +98,25 @@
                 &.open {
                     right: 0;
                 }
+                &__search {
+                    &__form {
+                        height: 36px;
+                        display: flex;
+                    }
+                    &__query {
+                        width: 85%;
+                        border: 1px solid $border;
+                        padding: 10px;
+                    }
+                    &__button {
+                        width: 15%;
+                        margin-left: -1px;
+                        border: 1px solid $border;
+                        color: $light-text;
+                    }
+                }
                 &__topMenu {
+                    margin-top: 10px;
                     &__items {
                         display: flex;
                         flex-direction: column;
