--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,5 +1,19 @@
 {{ define "sidebar" }}
     <div class="partials__sidebar">
+        <div class="pcShow partials__sidebar__card">
+            <h4 class="partials__sidebar__title">
+                検索
+            </h4>
+            <nav class="partials__sidebar__search">
+                <form action="{{ "search" | relURL }}" class="partials__sidebar__search__form">
+                    <input type="text" name="query" id="search" class="partials__sidebar__search__query">
+                    <button type="submit" class="partials__sidebar__search__button">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </form>
+            </nav>
+        </div>
+
         <div class="partials__sidebar__card">
             <h3 class="partials__sidebar__title">
                 プロフィール
