--- a/layouts/partials/tag-list.html
+++ b/layouts/partials/tag-list.html
@@ -2,7 +2,7 @@
 <ul class="partials__tagList">
     {{ range $tags }}
         <li class="partials__tagList__item">
-            <a href="{{ "tags" | relURL }}/{{ .Name | urlize }}" class="partials__tagList__itemLink">
+            <a href="{{ "tags" | relURL }}/{{ .Name }}" class="partials__tagList__itemLink">
                 <i class="fas fa-tag partials__tagList__itemIcon"></i>{{ .Name }}
             </a>
         </li>
