--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -87,10 +87,14 @@
     {{ with .OutputFormats.Get "rss" -}}
         {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
     {{ end -}}
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="style">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" media="print" onload="this.media='all'">
     {{ $style := resources.Get "scss/style.scss" | toCSS | minify | fingerprint }}
     <link rel="stylesheet" href="{{ $style.Permalink }}">
+    <link rel="preload" href="/css/vendor/@fortawesome/fontawesome-free/css/all.min.css" as="style">
     <link rel="stylesheet" href="/css/vendor/@fortawesome/fontawesome-free/css/all.min.css" media="print" onload="this.media='all'">
     {{ if .IsPage }}
+        <link rel="preload" href="/css/vendor/github-markdown-css/github-markdown.css" as="style">
         <link rel="stylesheet" href="/css/vendor/github-markdown-css/github-markdown.css" media="print" onload="this.media='all'">
     {{ end }}
     {{ if eq .Section "search" }}
