--- a/assets/scss/layouts/partials/header.scss
+++ b/assets/scss/layouts/partials/header.scss
@@ -107,11 +107,13 @@
                         width: 85%;
                         border: 1px solid $border;
                         padding: 10px;
+                        outline: 0;
                     }
                     &__button {
                         width: 15%;
-                        margin-left: -1px;
+                        margin-left: -3px;
                         border: 1px solid $border;
+                        background: $light-background;
                         color: $light-text;
                     }
                 }
