--- a/assets/scss/layouts/_default/baseof.scss
+++ b/assets/scss/layouts/_default/baseof.scss
@@ -2,6 +2,10 @@
     color: $base-font-color;
     font-family: $base-font;
 }
+.container {
+    min-width: 1260px;
+    min-height: 100vh;
+}
 .header {
     position: relative;
     z-index: 10;
@@ -18,7 +22,6 @@
     display: flex;
     justify-content: center;
     flex-direction: row;
-    min-height: 400px;
     background: $content-background;
 }
 .main {
@@ -58,6 +61,10 @@
     }
 }
 @media only screen and (max-width: $sp-width) {
+    .container {
+        min-width: 100%;
+        min-height: 100vh;
+    }
     .header {
         position: fixed;
         z-index: 9999;
