ランキング機能追加

--- a/assets/scss/variable.scss
+++ b/assets/scss/variable.scss
@@ -17,6 +17,7 @@ $footer-background: #fff;
 // Site detail
 $title-border:#494949;
 $pickup-title-border:#ff6688;
+$ranking-title-border:#ff9800;
 $border: #ccc;
 $light-border: #e8e8e8;
 $light-background: #f5f5f5;
