--- a/assets/scss/layouts/partials/sidebar.scss
+++ b/assets/scss/layouts/partials/sidebar.scss
@@ -19,6 +19,11 @@
                 padding-bottom: 2px;
                 border-bottom: 2px solid $pickup-title-border;
             }
+            &--ranking {
+                margin-bottom: 15px;
+                padding-bottom: 2px;
+                border-bottom: 2px solid $ranking-title-border;
+            }
         }
         &__search {
             &__form {
@@ -114,15 +119,29 @@
                 height: 54px;
                 object-fit: cover;
             }
-            &__itemTitle {
-                flex: 1;
+            &__itemDetail {
                 margin-left: 10px;
+            }
+            %__itemTitle {
                 font-size: 13px;
                 font-weight: bold;
                 display: -webkit-box;
                 -webkit-box-orient: vertical;
-                -webkit-line-clamp: 3;
                 overflow: hidden;
+            }
+            &__itemTitle {
+                &--line2 {
+                    @extend %__itemTitle;
+                    -webkit-line-clamp: 2;
+                }
+                &--line3 {
+                    @extend %__itemTitle;
+                    -webkit-line-clamp: 3;
+                }
+            }
+            &__itemPv {
+                font-size: 12px;
+                color: $light-text;
             }
         }
         &__archive {
