スマホだとテーブル表示のデザインが崩れるので修正

--- a/assets/scss/layouts/_default/single.scss
+++ b/assets/scss/layouts/_default/single.scss
@@ -86,6 +86,10 @@
                 padding-left: 20px;
                 border-left: 10px solid $title-border;
             }
+            table{
+                overflow: auto;
+                white-space: nowrap;
+            }
         }
     }
     &__relatedArticleList {
