ブログカードのテキスト表示を3行までに修正

--- a/layouts/shortcodes/blog-card.html
+++ b/layouts/shortcodes/blog-card.html
@@ -36,7 +36,7 @@
                 <h2 style="margin: 0;padding-bottom: 13px;border: none;font-size: 16px;">
                     {{- $title -}}
                 </h2>
-                <p style="margin: 0;font-size: 13px;">
+                <p style="margin: 0;font-size: 13px;word-break: break-word;display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 3;overflow: hidden;">
                     {{- $description | plainify | safeHTML -}}
                 </p>
             </div>
