--- a/layouts/shortcodes/self-blog-card.html
+++ b/layouts/shortcodes/self-blog-card.html
@@ -17,7 +17,7 @@
                 <h2 style="margin: 0;padding-bottom: 13px;border: none;font-size: 16px;">
                     {{- .Title -}}
                 </h2>
-                <div style="margin: 0;font-size: 13px;">
+                <div style="margin: 0;font-size: 13px;word-break: break-word;display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 3;overflow: hidden;">
                     {{- .Summary | plainify | safeHTML -}}
                 </div>
             </div>
