--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -5,7 +5,7 @@
                 検索
             </h4>
             <nav class="partials__sidebar__search">
-                <form action="{{ "search" | relURL }}" class="partials__sidebar__search__form">
+                <form action="{{ "search/" | relURL }}" method="get" class="partials__sidebar__search__form">
                     <input type="text" name="query" id="search" class="partials__sidebar__search__query">
                     <button type="submit" class="partials__sidebar__search__button">
                         <i class="fas fa-search"></i>
