--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -7,6 +7,9 @@ a:hover, a:hover * {
     cursor: pointer;
     opacity: 0.75;
 }
+ul, ol {
+  list-style: none;
+}
 h1 {
     font-size: 28px;
     font-weight: bold;
